welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: value && is not a member of Int
    if (nums(i) == nums(i+1 && nums(i)==nums(i+2))){
                            ^